<resources>
    <string name="app_name">ToDo</string>
    <string name="one">1</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="priority">Priority :</string>
    <string name="save">Save</string>
    <string name="title1">Title1</string>
    <string name="delete_all">Delete All</string>
</resources>
